// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatInput matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col w-full justify-around flex-shrink-0 items-center  my-1"
  >
    <div
      class="flex w-full justify-around items-center border-2 border-indigo-300 bg-indigo-200 bg-opacity-30 rounded-lg"
    >
      <div
        class="flex w-3/12 ms:w-2/12  sm:w-1/12 items-center justify-around md:mx-1"
      >
        <div
          class="relative group"
        >
          <button
            aria-label="Capture Screenshot"
            class="flex items-center justify-center font-bold  rounded cursor-pointer disabled:cursor-not-allowed"
          >
            <svg
              fill="currentColor"
              height="30"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="30"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 3H5V5H3V3ZM7 3H9V5H7V3ZM11 3H13V5H11V3ZM15 3H17V5H15V3ZM19 3H21V5H19V3ZM19 7H21V9H19V7ZM3 19H5V21H3V19ZM3 15H5V17H3V15ZM3 11H5V13H3V11ZM3 7H5V9H3V7ZM10.6667 11L11.7031 9.4453C11.8886 9.1671 12.2008 9 12.5352 9H15.4648C15.7992 9 16.1114 9.1671 16.2969 9.4453L17.3333 11H20C20.5523 11 21 11.4477 21 12V20C21 20.5523 20.5523 21 20 21H8C7.44772 21 7 20.5523 7 20V12C7 11.4477 7.44772 11 8 11H10.6667ZM14 18C15.1046 18 16 17.1046 16 16C16 14.8954 15.1046 14 14 14C12.8954 14 12 14.8954 12 16C12 17.1046 12.8954 18 14 18Z"
              />
            </svg>
          </button>
          <span
            class="absolute top-full left-1/2 transform -translate-x-1/2 mt-4 hidden group-hover:block bg-gray-100 text-black text-xs rounded py-1 px-5 whitespace-nowrap"
          >
            Capture Screenshot
          </span>
        </div>
        <div
          class="relative group"
        >
          <button
            aria-label="Upload File"
            class="flex items-center justify-center font-bold  rounded cursor-pointer disabled:cursor-not-allowed"
          >
            <label
              class="flex items-center justify-center  text-white font-bold px-2 rounded cursor-pointer"
              tabindex="0"
            >
              <input
                accept="image/*, .pdf, .html, .xml, .docx, .txt, .yml, .yaml, .tsx, .ts, .js, .cjs, .coffee, .css, .scss, .sass, less, .xsl, .xlsx,  .jsx, .java, .py, .php, .rb, .erb, .rake, .slim, .cpp, .c, .go, .rs, .log, .cjs, .snap, .sh, .md, .csv, .html, .json, .toml, .sh,  .map,  .xml, .lock, .mod, .metal, .sum, .h, .m, .asp, .net, .dll, .cs, .vb, .fs, .config, .resx, .csproj, .sln"
                aria-label="Upload file"
                style="display: none;"
                type="file"
              />
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                style="cursor: pointer; background: rgb(123, 123, 220); border: 1px solid black;"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 15V18H24V20H21V23H19V20H16V18H19V15H21ZM21.0082 3C21.556 3 22 3.44495 22 3.9934L22.0007 13.3417C21.3749 13.1204 20.7015 13 20 13V5H4L4.001 19L13.2929 9.70715C13.6528 9.34604 14.22 9.31823 14.6123 9.62322L14.7065 9.70772L18.2521 13.2586C15.791 14.0069 14 16.2943 14 19C14 19.7015 14.1204 20.3749 14.3417 21.0007L2.9918 21C2.44405 21 2 20.5551 2 20.0066V3.9934C2 3.44476 2.45531 3 2.9918 3H21.0082ZM8 7C9.10457 7 10 7.89543 10 9C10 10.1046 9.10457 11 8 11C6.89543 11 6 10.1046 6 9C6 7.89543 6.89543 7 8 7Z"
                />
              </svg>
            </label>
          </button>
          <span
            class="absolute top-full left-1/2 transform -translate-x-1/2 mt-4 hidden group-hover:block bg-gray-100 text-black text-xs rounded py-1 px-5 whitespace-nowrap"
          >
            Upload File
          </span>
        </div>
      </div>
      <form
        class="flex items-center w-8/12 ms:w-9/12 xs:w-10/12 xl:w-11/12 px-2 py-1 rounded-lg hover:bg-indigo-100 focus:outline-none focus:ring focus:ring-stone-300 focus:ring-offset-red"
      >
        <textarea
          aria-label="Enter your message here"
          class="w-full max-h-96 placeholder-gray-400 overflow-y-auto focus: p-3 focus:ring-stone-100 focus:outline-none"
          id="userInput"
          name="userInput"
          placeholder="Click to send. Shift + Enter for a new line."
          rows="1"
          spellcheck="true"
        />
        <button
          class="p-1 border-none opacity-60 hover:stone-600 disabled:cursor-not-allowed"
          disabled=""
          type="submit"
        >
          <svg
            class="w-5 h-5 rotate-90 fill-current"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
            >
              <title>
                Arrow Submit Button
              </title>
            </path>
          </svg>
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChatInput matches snapshot when isVisionModel is false 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col w-full justify-around flex-shrink-0 items-center  my-1"
  >
    <div
      class="flex w-full justify-around items-center border-2 border-indigo-300 bg-indigo-200 bg-opacity-30 rounded-lg"
    >
      <div
        class="flex w-3/12 ms:w-2/12  sm:w-1/12 items-center justify-around md:mx-1"
      >
        <div
          class="relative group"
        >
          <button
            aria-label="Capture Screenshot"
            class="flex items-center justify-center font-bold  rounded cursor-pointer disabled:cursor-not-allowed"
            disabled=""
          >
            <svg
              fill="currentColor"
              height="30"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="30"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 3H5V5H3V3ZM7 3H9V5H7V3ZM11 3H13V5H11V3ZM15 3H17V5H15V3ZM19 3H21V5H19V3ZM19 7H21V9H19V7ZM3 19H5V21H3V19ZM3 15H5V17H3V15ZM3 11H5V13H3V11ZM3 7H5V9H3V7ZM10.6667 11L11.7031 9.4453C11.8886 9.1671 12.2008 9 12.5352 9H15.4648C15.7992 9 16.1114 9.1671 16.2969 9.4453L17.3333 11H20C20.5523 11 21 11.4477 21 12V20C21 20.5523 20.5523 21 20 21H8C7.44772 21 7 20.5523 7 20V12C7 11.4477 7.44772 11 8 11H10.6667ZM14 18C15.1046 18 16 17.1046 16 16C16 14.8954 15.1046 14 14 14C12.8954 14 12 14.8954 12 16C12 17.1046 12.8954 18 14 18Z"
              />
            </svg>
          </button>
          <span
            class="absolute top-full left-1/2 transform -translate-x-1/2 mt-4 hidden group-hover:block bg-gray-100 text-black text-xs rounded py-1 px-5 whitespace-nowrap"
          >
            ai-model does not have vision feature
          </span>
        </div>
        <div
          class="relative group"
        >
          <button
            aria-label="Upload File"
            class="flex items-center justify-center font-bold  rounded cursor-pointer disabled:cursor-not-allowed"
            disabled=""
          >
            <label
              class="flex items-center justify-center  text-white font-bold px-2 rounded cursor-pointer"
              tabindex="0"
            >
              <input
                accept="image/*, .pdf, .html, .xml, .docx, .txt, .yml, .yaml, .tsx, .ts, .js, .cjs, .coffee, .css, .scss, .sass, less, .xsl, .xlsx,  .jsx, .java, .py, .php, .rb, .erb, .rake, .slim, .cpp, .c, .go, .rs, .log, .cjs, .snap, .sh, .md, .csv, .html, .json, .toml, .sh,  .map,  .xml, .lock, .mod, .metal, .sum, .h, .m, .asp, .net, .dll, .cs, .vb, .fs, .config, .resx, .csproj, .sln"
                aria-label="Upload file"
                style="display: none;"
                type="none"
              />
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                style="cursor: pointer; background: rgb(123, 123, 220); border: 1px solid black;"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 15V18H24V20H21V23H19V20H16V18H19V15H21ZM21.0082 3C21.556 3 22 3.44495 22 3.9934L22.0007 13.3417C21.3749 13.1204 20.7015 13 20 13V5H4L4.001 19L13.2929 9.70715C13.6528 9.34604 14.22 9.31823 14.6123 9.62322L14.7065 9.70772L18.2521 13.2586C15.791 14.0069 14 16.2943 14 19C14 19.7015 14.1204 20.3749 14.3417 21.0007L2.9918 21C2.44405 21 2 20.5551 2 20.0066V3.9934C2 3.44476 2.45531 3 2.9918 3H21.0082ZM8 7C9.10457 7 10 7.89543 10 9C10 10.1046 9.10457 11 8 11C6.89543 11 6 10.1046 6 9C6 7.89543 6.89543 7 8 7Z"
                />
              </svg>
            </label>
          </button>
          <span
            class="absolute top-full left-1/2 transform -translate-x-1/2 mt-4 hidden group-hover:block bg-gray-100 text-black text-xs rounded py-1 px-5 whitespace-nowrap"
          >
            ai-model does not have vision feature
          </span>
        </div>
      </div>
      <form
        class="flex items-center w-8/12 ms:w-9/12 xs:w-10/12 xl:w-11/12 px-2 py-1 rounded-lg hover:bg-indigo-100 focus:outline-none focus:ring focus:ring-stone-300 focus:ring-offset-red"
      >
        <textarea
          aria-label="Enter your message here"
          class="w-full max-h-96 placeholder-gray-400 overflow-y-auto focus: p-3 focus:ring-stone-100 focus:outline-none"
          id="userInput"
          name="userInput"
          placeholder="Click to send. Shift + Enter for a new line."
          rows="1"
          spellcheck="true"
        />
        <button
          class="p-1 border-none opacity-60 hover:stone-600 disabled:cursor-not-allowed"
          disabled=""
          type="submit"
        >
          <svg
            class="w-5 h-5 rotate-90 fill-current"
            viewBox="0 0 18 18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
            >
              <title>
                Arrow Submit Button
              </title>
            </path>
          </svg>
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
